<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/prefCategoryAccount">

        <Preference
            android:key="pref_change_user"
            android:title="@string/prefTitleChangeUser" />

        <Preference
            android:key="pref_change_profile_name"
            android:title="@string/prefTitleChangeProfileName" />

        <Preference
            android:key="pref_imgur"
            android:title="@string/prefTitleImgur" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/prefCategoryFriends">

        <ListPreference
            android:defaultValue="604800000"
            android:entries="@array/prefEntriesFriendsRecents"
            android:entryValues="@array/prefValuesFriendsRecents"
            android:key="pref_friends_list_recents"
            android:title="@string/prefTitleFriendsRecents" />

    </PreferenceCategory>

    <!--<PreferenceCategory android:title="@string/prefCategoryOther">

        <SwitchPreference
            android:defaultValue="false"
            android:icon="@drawable/ic_bubble"
            android:key="pref_chat_bubble"
            android:title="@string/prefTitleChatBubble" />

    </PreferenceCategory>-->

    <PreferenceCategory android:title="@string/prefCategoryAbout">

        <Preference
            android:key="pref_version"
            android:title="@string/prefTitleVersion" />

        <Preference
            android:key="pref_rate_app"
            android:title="@string/prefTitleRateApp" />

        <Preference
            android:key="pref_source_code"
            android:title="@string/prefTitleSourceCode" />

        <Preference
            android:key="pref_licences"
            android:title="@string/prefTitleLicenses" />

    </PreferenceCategory>

</PreferenceScreen>
